Adiciona links completos de paginação (first, prev, next, last)