@@ -11,6 +11,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
 
@@ -26,14 +27,14 @@ public class GameController {
 
     @GetMapping
     public Map<String, Object> findAll(@RequestParam(defaultValue = "0") int page,
-                                       @RequestParam(defaultValue = "10") int size) {
+                                       @RequestParam(defaultValue = "6") int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Game> gamePage = gameService.findAll(pageable);
 
         List<EntityModel<Game>> games = gamePage.getContent()
                 .stream()
                 .map(Game::toEntityModel)
-                .toList();
+                .collect(Collectors.toList());
 
         Map<String, Object> response = new HashMap<>();
         response.put("_embedded", Map.of("gameList", games));
@@ -45,9 +46,29 @@ public class GameController {
         pageInfo.put("number", gamePage.getNumber());
         response.put("page", pageInfo);
 
-        response.put("_links", Map.of(
-                "self", Map.of("href", linkTo(methodOn(GameController.class).findAll(page, size)).withSelfRel().getHref())
-        ));
+        // Links de navegação
+        Map<String, Object> links = new HashMap<>();
+
+        // Self link
+        links.put("self", Map.of("href", linkTo(methodOn(GameController.class).findAll(page, size)).withSelfRel().getHref()));
+
+        // First link
+        links.put("first", Map.of("href", linkTo(methodOn(GameController.class).findAll(0, size)).withSelfRel().getHref()));
+
+        // Last link
+        links.put("last", Map.of("href", linkTo(methodOn(GameController.class).findAll(gamePage.getTotalPages() - 1, size)).withSelfRel().getHref()));
+
+        // Prev link
+        if (gamePage.hasPrevious()) {
+            links.put("prev", Map.of("href", linkTo(methodOn(GameController.class).findAll(page - 1, size)).withSelfRel().getHref()));
+        }
+
+        // Next link
+        if (gamePage.hasNext()) {
+            links.put("next", Map.of("href", linkTo(methodOn(GameController.class).findAll(page + 1, size)).withSelfRel().getHref()));
+        }
+
+        response.put("_links", links);
 
         return response;
     }
@@ -60,14 +81,14 @@ public class GameController {
     @GetMapping("/genres/{genreId}")
     public Map<String, Object> findByGenre(@PathVariable Long genreId,
                                            @RequestParam(defaultValue = "0") int page,
-                                           @RequestParam(defaultValue = "10") int size) {
+                                           @RequestParam(defaultValue = "6") int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Game> gamePage = gameService.findByGenreId(genreId, pageable);
 
         List<EntityModel<Game>> games = gamePage.getContent()
                 .stream()
                 .map(Game::toEntityModel)
-                .toList();
+                .collect(Collectors.toList());
 
         Map<String, Object> response = new HashMap<>();
         response.put("_embedded", Map.of("gameList", games));
@@ -79,9 +100,21 @@ public class GameController {
         pageInfo.put("number", gamePage.getNumber());
         response.put("page", pageInfo);
 
-        response.put("_links", Map.of(
-                "self", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, page, size)).withSelfRel().getHref())
-        ));
+        // Links de navegação
+        Map<String, Object> links = new HashMap<>();
+
+        links.put("self", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, page, size)).withSelfRel().getHref()));
+        links.put("first", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, 0, size)).withSelfRel().getHref()));
+        links.put("last", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, gamePage.getTotalPages() - 1, size)).withSelfRel().getHref()));
+
+        if (gamePage.hasPrevious()) {
+            links.put("prev", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, page - 1, size)).withSelfRel().getHref()));
+        }
+        if (gamePage.hasNext()) {
+            links.put("next", Map.of("href", linkTo(methodOn(GameController.class).findByGenre(genreId, page + 1, size)).withSelfRel().getHref()));
+        }
+
+        response.put("_links", links);
 
         return response;
     }
@@ -89,14 +122,14 @@ public class GameController {
     @GetMapping("/platforms/{platformId}")
     public Map<String, Object> findByPlatform(@PathVariable Long platformId,
                                               @RequestParam(defaultValue = "0") int page,
-                                              @RequestParam(defaultValue = "10") int size) {
+                                              @RequestParam(defaultValue = "6") int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Game> gamePage = gameService.findByPlatformId(platformId, pageable);
 
         List<EntityModel<Game>> games = gamePage.getContent()
                 .stream()
                 .map(Game::toEntityModel)
-                .toList();
+                .collect(Collectors.toList());
 
         Map<String, Object> response = new HashMap<>();
         response.put("_embedded", Map.of("gameList", games));
@@ -108,9 +141,21 @@ public class GameController {
         pageInfo.put("number", gamePage.getNumber());
         response.put("page", pageInfo);
 
-        response.put("_links", Map.of(
-                "self", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, page, size)).withSelfRel().getHref())
-        ));
+        // Links de navegação
+        Map<String, Object> links = new HashMap<>();
+
+        links.put("self", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, page, size)).withSelfRel().getHref()));
+        links.put("first", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, 0, size)).withSelfRel().getHref()));
+        links.put("last", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, gamePage.getTotalPages() - 1, size)).withSelfRel().getHref()));
+
+        if (gamePage.hasPrevious()) {
+            links.put("prev", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, page - 1, size)).withSelfRel().getHref()));
+        }
+        if (gamePage.hasNext()) {
+            links.put("next", Map.of("href", linkTo(methodOn(GameController.class).findByPlatform(platformId, page + 1, size)).withSelfRel().getHref()));
+        }
+
+        response.put("_links", links);
 
         return response;
     }
